--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -6,21 +6,90 @@
     android:layout_height="match_parent"
     tools:context=".Activities.ProductActivity"
     tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="-10dp">
+    tools:layout_editor_absoluteY="0dp">
 
     <TextView
         android:id="@+id/P_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:text="@string/name"
         android:textColor="@color/teal_700"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/product_name"
-        app:layout_constraintStart_toStartOf="@+id/product_image" />
+        app:layout_constraintStart_toStartOf="@+id/product_image"
+        app:layout_constraintTop_toBottomOf="@+id/product_image" />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/price"
+        android:textColor="@color/teal_700"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/product_price"
+        app:layout_constraintStart_toStartOf="@+id/P_name" />
+
+    <TextView
+        android:id="@+id/product_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="7dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/P_name"
+        app:layout_constraintTop_toBottomOf="@+id/product_image" />
+
+    <TextView
+        android:id="@+id/product_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="28dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/price"
+        app:layout_constraintTop_toBottomOf="@+id/product_name" />
+
+    <TextView
+        android:id="@+id/product_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="24dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/product_page_location"
+        app:layout_constraintEnd_toStartOf="@+id/productpage_location"
+        app:layout_constraintStart_toStartOf="@+id/productpage_location" />
+
+    <TextView
+        android:id="@+id/productpage_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/productpage_description"
+        app:layout_constraintTop_toBottomOf="@+id/product_description" />
+
+    <TextView
+        android:id="@+id/product_page_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="69dp"
+        android:text="@string/location"
+        android:textColor="@color/teal_700"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/C_name"
+        app:layout_constraintStart_toStartOf="@+id/productpage_description" />
+
+    <TextView
+        android:id="@+id/productpage_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/description"
@@ -31,61 +100,52 @@
         app:layout_constraintStart_toStartOf="@+id/price" />
 
     <TextView
-        android:id="@+id/product_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="36dp"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/contactInfo"
-        app:layout_constraintStart_toEndOf="@+id/description" />
-
-    <TextView
         android:id="@+id/contactInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="12dp"
         android:text="@string/contact_info"
         android:textColor="@color/teal_700"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/contact_name"
-        app:layout_constraintStart_toStartOf="@+id/contact_name" />
+        app:layout_constraintStart_toEndOf="@+id/product_page_location"
+        app:layout_constraintTop_toBottomOf="@+id/product_page_location" />
 
     <TextView
         android:id="@+id/C_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="46dp"
+        android:layout_marginEnd="46dp"
         android:text="@string/name"
         android:textColor="@color/teal_700"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/contact_name"
-        app:layout_constraintEnd_toEndOf="@+id/P_name"
-        app:layout_constraintStart_toStartOf="@+id/description" />
+        app:layout_constraintEnd_toEndOf="@+id/productpage_description"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/contact_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="20dp"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/number"
-        app:layout_constraintStart_toEndOf="@+id/C_name" />
+        app:layout_constraintEnd_toStartOf="@+id/contact_number"
+        app:layout_constraintStart_toStartOf="@+id/contact_number" />
 
     <TextView
         android:id="@+id/contact_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="21dp"
-        android:layout_marginBottom="33dp"
+        android:layout_marginBottom="78dp"
         android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/number" />
 
     <TextView
@@ -99,58 +159,25 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/contact_number"
         app:layout_constraintStart_toStartOf="@+id/C_name" />
 
-    <TextView
-        android:id="@+id/product_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginBottom="28dp"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/product_price"
-        app:layout_constraintStart_toEndOf="@+id/P_name" />
-
-    <TextView
-        android:id="@+id/product_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginBottom="28dp"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/description"
-        app:layout_constraintStart_toEndOf="@+id/price" />
-
-    <TextView
-        android:id="@+id/price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/price"
-        android:textColor="@color/teal_700"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/product_price"
-        app:layout_constraintStart_toStartOf="@+id/P_name" />
-
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="278dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginBottom="47dp"
+        android:layout_height="194dp"
+        android:layout_marginTop="119dp"
+        android:layout_marginBottom="118dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/image_desc"
-        app:layout_constraintBottom_toBottomOf="@+id/P_name"
-        app:layout_constraintEnd_toEndOf="@+id/product_page"
-        app:layout_constraintStart_toEndOf="@+id/product_page"
-        app:layout_constraintTop_toTopOf="@+id/product_page"
+        app:layout_constraintBottom_toTopOf="@+id/productpage_description"
+        app:layout_constraintStart_toStartOf="@+id/product_page"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_image" />
 
     <TextView
         android:id="@+id/product_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="12dp"
         android:text="@string/product_page"
         android:textColor="@color/teal_700"
         android:textSize="25sp"
@@ -161,11 +188,13 @@
     <RelativeLayout
         android:id="@+id/relativeLayout2"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/number">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
@@ -184,7 +213,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="7dp"
         android:contentDescription="@string/backimagebutton"
         android:minHeight="48dp"
         app:layout_constraintStart_toStartOf="parent"
