--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,7 +43,7 @@
         android:minHeight="48dp"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/p_user_password"
-        app:layout_constraintTop_toTopOf="@+id/up_button"
+        app:layout_constraintTop_toTopOf="@+id/up_profile"
         tools:ignore="TextContrastCheck,TextContrastCheck" />
 
     <EditText
@@ -169,7 +169,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/up_button"
+        android:id="@+id/up_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
