--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -99,5 +99,31 @@
         app:layout_constraintHorizontal_bias="0.273"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/empty_product_image_home"
+        android:layout_width="114dp"
+        android:layout_height="205dp"
+        android:layout_marginTop="84dp"
+        app:layout_constraintEnd_toEndOf="@+id/products_recycleView"
+        app:layout_constraintHorizontal_bias="0.497"
+        android:alpha="0.2"
+        app:layout_constraintStart_toStartOf="@+id/products_recycleView"
+        app:layout_constraintTop_toTopOf="@+id/products_recycleView"
+        app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/text_empty_home_pg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Product Available"
+        android:textColor="@color/dark_teal"
+        android:textSize="24sp"
+        android:alpha="0.5"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/products_recycleView"
+        app:layout_constraintStart_toStartOf="@+id/products_recycleView"
+        app:layout_constraintTop_toBottomOf="@+id/empty_product_image_home" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
