--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,10 +11,10 @@
         android:layout_width="0dp"
         android:layout_height="230dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="79dp"
+        android:layout_marginTop="76dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="78dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
@@ -203,6 +203,32 @@
             app:menu="@menu/bottom_nav_bar" />
 
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/profile_empty_product"
+        android:layout_width="135dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="28dp"
+        android:alpha="0.2"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/p_recycleview"
+        app:layout_constraintStart_toStartOf="@+id/p_recycleview"
+        app:layout_constraintTop_toTopOf="@+id/p_recycleview"
+        app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />
+
+    <TextView
+        android:id="@+id/product_empty_txt_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="No Products Posted"
+        android:textColor="@color/dark_teal"
+        android:textSize="20sp"
+        android:alpha="0.5"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/p_recycleview"
+        app:layout_constraintStart_toStartOf="@+id/p_recycleview"
+        app:layout_constraintTop_toBottomOf="@+id/profile_empty_product" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
